- Added single step button (100ms)  - Added time slider (no rewind for now)  - changed speed buttons to 1x, 5x, 10x

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Assets\Scripts\Curves\ActualThrottleCurve.cs" />
     <Compile Include="Assets\Scripts\Curves\RadarRangeCurve.cs" />
     <Compile Include="Assets\Modern UI Pack\Scripts\LaunchURL.cs" />
+    <Compile Include="Assets\Scripts\TimeSliderController.cs" />
     <Compile Include="Assets\Scripts\Events\ImpactDamageEvent.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\CameraController.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
